<resources>
    <string name="app_name">Quiz 1</string>
    <string name="main_name">Student Info</string>
    <string name="update_name">Update Info</string>
    <string name="name">Name:</string>
    <string name="id">ID:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string name="gpa">GPA:</string>
    <string name="courses">Courses:</string>
    <string name="editInfo">EDIT INFO</string>
    <string name="save">SAVE</string>
    <string name="cancel">CANCEL</string>
</resources>