<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/humberYellow"
    tools:context=".StudentActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/textFields"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_text_vert_40pc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.40" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/name"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/tvID"
            app:layout_constraintEnd_toStartOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/id"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/tvAge"
            app:layout_constraintEnd_toStartOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <TextView
            android:id="@+id/tvAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/age"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvID" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/gender"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/tvGPA"
            app:layout_constraintEnd_toStartOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvAge" />

        <TextView
            android:id="@+id/tvGPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/gpa"
            android:textSize="25sp"
            app:layout_constraintBottom_toTopOf="@+id/tvCourses"
            app:layout_constraintEnd_toStartOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvGender" />

        <TextView
            android:id="@+id/tvCourses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="end"
            android:text="@string/courses"
            android:textSize="25sp"
            app:layout_constraintEnd_toStartOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvGPA" />

        <TextView
            android:id="@+id/tvNameDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvName"
            app:layout_constraintBottom_toTopOf="@+id/tvIDDisplay"
            app:layout_constraintStart_toEndOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvIDDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvID"
            app:layout_constraintBottom_toTopOf="@+id/tvAgeDisplay"
            app:layout_constraintStart_toEndOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvNameDisplay" />

        <TextView
            android:id="@+id/tvAgeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvAge"
            app:layout_constraintStart_toEndOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvIDDisplay" />

        <TextView
            android:id="@+id/tvGenderDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvGender"
            app:layout_constraintBottom_toTopOf="@+id/tvGPADisplay"
            app:layout_constraintStart_toEndOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvAgeDisplay" />

        <TextView
            android:id="@+id/tvGPADisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvGPA"
            app:layout_constraintBottom_toTopOf="@+id/tvCoursesDisplay"
            app:layout_constraintStart_toEndOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvGenderDisplay" />

        <TextView
            android:id="@+id/tvCoursesDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/tvCourses"
            app:layout_constraintStart_toEndOf="@id/guideline_text_vert_40pc"
            app:layout_constraintTop_toBottomOf="@+id/tvGPADisplay" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/buttonEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:onClick="editClicked"
        android:padding="16dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/editInfo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFields" />

</androidx.constraintlayout.widget.ConstraintLayout>